--- a/src/main/resources/templates/propiedades/detail.html
+++ b/src/main/resources/templates/propiedades/detail.html
@@ -4,7 +4,7 @@
 <head th:replace="~{layout/base :: head(${title})}"></head>
 
 <body>
-    <div th:replace="~{layout/base :: navbar}"></div>
+    <div th:replace="~{layout/base :: navbar('propiedades')}"></div>
     <div th:replace="~{layout/base :: messages}"></div>
 
     <div class="container">
